--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": " node index.js",
     "dev": "nodemon index.js",
+    "inspect": "nodemon --inspect index.js",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -20,7 +22,10 @@
     "nodemon": "^3.1.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
+    "@stylistic/eslint-plugin-js": "^2.11.0",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.7.8"
+    "@types/node": "^22.7.8",
+    "eslint": "^9.15.0"
   }
 }
